
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MODx 0.9.5 RC3 (rev 2001 - Nov 12, 2006)
====================================
* Modified a few more places that relied on global variables to use the new constants introduced in revision 1922. (2001)
* Allow QuickEdit to set the proper manager user ID using the new getLoginUserID parameter. (2001)
* [FS#299] Added context parameter to getLoginUserID API method that will return a specific type of user id if 'web' or 'mgr' is provided (alternate solution to that applied in rev 1860). (2001)
* [FS#666] Add return false to onclick for Quick Edit buttons (1949) 
* Minor update to eForm to address date handling differences between PHP 5.1+ and earlier versions
* [FS#654] Add regiseter_globals check to manager (1944)
* [FS#660] Fix minor HTML error with Ajax search (1943)
* Fix styling on manager pages for IE6 in MODx Light Theme (1942)
* Fix Stop Working errors on Modules (1942)
* Fix cancel button on bottom button bar plugin (1941)
* Update Wayfinder to 1.0.1 + add examples to main distrubiton (1940)
* Fix top menu display issue on IE6. (1936)
* [FS#642] and [FS#652] Make correct container icons show when doc tree is initially shown/refreshed. (1929)
* Update Jot's included PHx parser class to 1.5 (1933)
* [FS#634] Order permission groups alphabetically when editing/creating a web user. (1928)
* [FS#655] Wrong lang string showing for locked items in the 'Manage Resource' section - amended so locked items use the generic 'locked' lang string. (1927)
* [FS#512] Recommit doc parser changes re mySQL 4.1.21 and document sorting. (1926)
* DocManager: Remove references to modx.js and cb2.js. (1910, 1911)
* Added constants to represent global path variables and make use in places where potential remote file inclusion points exist. (1922)